--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <label class="block text-sm font-medium text-slate-600 dark:text-slate-400 uppercase tracking-wider"
                     data-i18n="labelExcel">Excel Serial Number</label>
                 <div class="relative">
-                    <input type="number" id="excelInput" placeholder="e.g. 45614.5" step="any"
+                    <input type="text" inputmode="decimal" id="excelInput" placeholder="e.g. 45614.5" step="any"
                         class="w-full bg-white dark:bg-slate-900 border border-slate-300 dark:border-slate-700 rounded-xl px-6 py-4 pr-14 text-xl text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-600 focus:outline-none focus:ring-2 focus:ring-teal-500/50 focus:border-teal-500 transition-all">
                     <button id="copyExcelBtn" type="button" title="Copy to clipboard"
                         class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-400 hover:text-teal-600 dark:hover:text-teal-400 transition-colors opacity-0 pointer-events-none"
